# ai-doctor-assistant

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
backend/: llm.py  rag_pipeline.py
config/: settings.py
core/: patient.py  suggestion_engine.py
data/: FILTERED_MEDICAMENTOS.csv  data_processing.py
services/: llm_service.py  rag_service.py
strategies/: base_strategy.py  exam_strategy.py  medicine_strategy.py
